Switching up the admin pages and Landing page

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -13,16 +13,20 @@
     "target": "es2015",
     "typeRoots": [
       "node_modules/@types",
-      "src/**/*"
+      "dist/src/app/message.ts"
     ],
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "listFiles": true
 //    "include": [
 //      "src/**/*" //or "../src/**/*.ts"
 //    ]
   },
+  "include": [
+    "./src/app/message.ts"
+  ],
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
     "strictInjectionParameters": true
