--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,14 +26,26 @@
     "@angular/platform-browser-dynamic": "~9.0.1",
     "@angular/router": "^9.0.1",
     "@auth0/angular-jwt": "^4.0.0",
+    "@ngu/carousel": "^1.5.5",
+    "@nicky-lenaers/ngx-scroll-to": "^3.0.1",
+    "@stockopedia/carousel": "^2.0.1",
     "@swimlane/ngx-charts": "^13.0.2",
+    "@swimlane/ngx-datatable": "^16.0.3",
+    "angular-calendar": "^0.28.2",
+    "angular-in-memory-web-api": "^0.9.0",
     "d3": "^5.15.0",
+    "date-fns": "^2.9.0",
     "eslint-plugin-json-format": "^2.0.1",
     "fucknode": "^1.0.4",
     "hammerjs": "^2.0.8",
+    "leaflet-map": "^0.2.1",
     "material-design-icons": "^3.0.1",
     "moment": "^2.24.0",
+    "ng2-dragula": "^2.1.1",
     "ngx-bar-rating-odilo": "^1.1.0",
+    "ngx-pagination": "^5.0.0",
+    "ngx-perfect-scrollbar": "^9.0.0",
+    "ngx-quill": "^8.0.0",
     "npm": "^6.13.7",
     "pdfmake": "^0.1.64",
     "quill": "^1.3.7",
@@ -47,15 +59,18 @@
     "@angular/cli": "^9.0.2",
     "@angular/compiler-cli": "~9.0.1",
     "@angular/language-service": "~9.0.1",
+    "@types/hammerjs": "^2.0.36",
     "@types/jasmine": "^3.5.3",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^13.7.1",
     "@typescript-eslint/eslint-plugin": "^2.19.2",
     "@typescript-eslint/parser": "^2.19.2",
     "@typescript-eslint/typescript-estree": "^2.19.2",
+    "codelyzer": "5.2.1",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.20.1",
+    "hammerjs": "^2.0.8",
     "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.4.1",
